--- a/statistics/stats-server/src/main/resources/application.properties
+++ b/statistics/stats-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
